# Vita3K

./: .gitmodules  CMakeLists.txt
src/emulator/: CMakeLists.txt  app.cpp  config.cpp  config.h  init.cpp  interface.cpp  main.cpp
src/emulator/app/src/: app_init.cpp
src/emulator/config/src/: config.cpp
src/emulator/gui/src/: game_selector.cpp  gui.cpp  settings_dialog.cpp
src/emulator/host/: CMakeLists.txt
src/emulator/modules/: CMakeLists.txt
src/emulator/util/: CMakeLists.txt
vita3k/: interface.cpp  interface.h  main.cpp
vita3k/app/: CMakeLists.txt
vita3k/app/include/app/: gl_screen_rendererer.h  screen_rendererer.h  vulkan_screen_renderer.h
vita3k/app/src/: gl_screen_rendererer.cpp  screen_render.cpp  vulkan_screen_renderer.cpp
vita3k/codec/src/: aac.cpp
vita3k/cpu/src/: cpu.cpp
vita3k/gui/src/: app_selector.cpp  gui.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_vulkan.cpp  settings_dialog.cpp
vita3k/gxm/src/: gxp.cpp
vita3k/modules/: CMakeLists.txt
vita3k/modules/SceAudiodec/: SceAudiodecUser.cpp
vita3k/modules/SceGxm/: SceGxm.cpp
vita3k/modules/SceMp4/: SceMp4.cpp  SceMp4.h
vita3k/modules/SceNgsUser/: SceNgs.cpp
vita3k/modules/SceSysmem/: SceSysmem.cpp
vita3k/modules/SceVideodec/: SceVideodecUser.cpp
vita3k/renderer/: CMakeLists.txt
vita3k/renderer/src/: batch.cpp  creation.cpp  driver_functions.h  renderer.cpp  state_set.cpp  sync.cpp
vita3k/shader/src/: spirv_recompiler.cpp  usse_program_analyzer.cpp
vita3k/shaders-builtin/: vulkan_render_frag.spv  vulkan_render_vert.spv
(+44 files in other folders)
